fix minor chat scrollbar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ h3,
 .chat {
     background-image: url('../img/mine.jpg');
     height: calc(100% - 140px);
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 2rem 5rem;
     display: flex;
     flex-direction: column;
